overflow problem resolved

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 
 }
 
+div.App {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 .button > button{
     padding: 12px 1.75rem;
     border: none;
